--- a/app/sass/footer/_style.scss
+++ b/app/sass/footer/_style.scss
@@ -1,7 +1,9 @@
 .footer {
+  position: relative;
   height: 100vh;
   width: 100%;
   background: url(../img/girl-04.jpg) center center no-repeat;
+  background-attachment: fixed;
   background-size: cover;
   font-size: 14px;
   &__form {
@@ -9,7 +11,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    min-width: 550px;
+    max-width: 550px;
+    width: 100%;
     padding: 25px;
     background-color: #fff;
     box-sizing: border-box;
