--- a/app/sass/base/_base.scss
+++ b/app/sass/base/_base.scss
@@ -1,6 +1,9 @@
+ @import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
+ 
 html{
     width: 100%;
 }
+
 body{
     width: 100%;
     margin: 0;
