--- a/app/sass/content/_plan.scss
+++ b/app/sass/content/_plan.scss
@@ -4,7 +4,7 @@
 	align-items: center;
 
 	min-height: 830px;
-	background-image: url(../img/girl-01.jpg);
+	//background-image: url(../img/girl-01.jpg);
 	background-repeat: no-repeat;
 	background-position: right center;
 	background-size: cover;
