--- a/app/sass/header/_head.scss
+++ b/app/sass/header/_head.scss
@@ -1,6 +1,6 @@
 header {
 	height: 720px;
-	background-image: url(../img/girl-03.jpg);
+	//background-image: url(../img/girl-03.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: top center;
