--- a/app/sass/content/_prices.scss
+++ b/app/sass/content/_prices.scss
@@ -1,9 +1,11 @@
 .prices {
   position: relative;
   width: 100%;
-  background: url(../img/girl-05.jpg) top center no-repeat;
-  background-attachment: fixed;
+  //background: url(../img/girl-05.jpg) top center no-repeat;
+  background-repeat: no-repeat;
   background-size: cover;
+  background-position: top center;
+  //background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center;
