--- a/app/sass/content/_images.scss
+++ b/app/sass/content/_images.scss
@@ -6,5 +6,9 @@
   img {
     width: 33.3%;
     min-width: 360px;
+    @include breakpoint(max-width 400px) {
+      min-width: 100%;
+      //object-fit: cover;
+    }
   }
 }
